postgres-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-clients
  namespace: collabspace
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: postgres
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: app
          operator: In
          values:
          - auth-service
          - user-service
          - workspace-service
          - backup-postgres
          - postgres-exporter
    - podSelector:
        matchLabels:
          app: debezium-connect
    - podSelector:
        matchLabels:
          cnpg.io/cluster: postgres
    ports:
    - port: 5432
      protocol: TCP
    - port: 8000
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cnpg-system
    ports:
    - port: 5432
      protocol: TCP
    - port: 8000
      protocol: TCP
